# portfolio-api

./: .gitignore  Cargo.toml  config.example.toml
public/: projects.json
src/: config.rs  main.rs
src/connectors/: redis_connector.rs
src/modules/: projects.rs  spotify.rs  weather.rs
